# mdld-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: API.md  Architecture.md  Guide.md  Parser.md  Subject.md  Syntax.md  Use-Cases.md  index.md  origin.md  polarity.md  primary-subject.md  statements.md
examples/: Cookbook.md  dogfood.md  few-shot.md  index.md  minimal.md  workflow.md
mdld_parse/: __init__.py  constants.py  content.py  generate.py  locate.py  merge.py  parse.py  render.py  shared.py  tokenizer.py  utils.py
sketches/: content_schema.py
spec/: Spec-compact.md  Spec.md  index.md
spec/grammar/: mdld.abnf  mdld.ebnf
tests/: conftest.py  test_content_preservation.py  test_elevated_statements.py  test_locate.py  test_merge.py  test_origin_lean.py  test_parse.py  test_render.py
