[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdld-parse"
version = "0.1.0"
description = "Parser, generator, merger, locator, and renderer for MD-LD (Markdown-Linked Data), a human-friendly RDF authoring format"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alan Snyder", email = "alan@deronyan.com" },
]
keywords = ["rdf", "linked-data", "markdown", "mdld", "semantic-web", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown-it-py>=3.0",
    "linkify-it-py>=2.0",
]

[project.urls]
Homepage = "https://github.com/alan-deronyan/dwim/tree/main/mdld-py"
Repository = "https://github.com/alan-deronyan/dwim"
Issues = "https://github.com/alan-deronyan/dwim/issues"
Changelog = "https://github.com/alan-deronyan/dwim/blob/main/mdld-py/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdld_parse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
